--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "test": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^6.6.0"
+    "broccoli-funnel": "^2.0.1",
+    "broccoli-merge-trees": "^3.0.0",
+    "ember-cli-babel": "^6.6.0",
+    "phoenix": "^1.3.0"
   },
   "devDependencies": {
     "@types/ember": "^2.8.4",
